# klotho

./: .gitignore  .golangci.toml  .prettierignore  .prettierrc.toml  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  README.md  compare.sh  create_k2_test.sh  create_test.sh  go.mod  go.sum  input.yaml  package-lock.json  release.py
.githooks/: pre-push
cmd/ast/: main.go
docs/: errors_and_logging.md  pull_request_template.md
pkg/k2/language_host/python/: Pipfile  debug_util.py  generate_and_adjust_grpc.py  infra.py  pyproject.toml  python_language_host.py  service_pb2.py  service_pb2_grpc.py
pkg/k2/language_host/python/klotho/: __init__.py  application.py  construct.py  klotho.py  output.py  provider.py  resource.py  runtime.py  runtime_util.py  type_util.py  urn.py
pkg/k2/language_host/python/klotho/aws/: __init__.py  bucket.py  container.py
pkg/k2/language_host/python/klothosdk/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
pkg/k2/language_host/python/klothosdk/src/klotho/: __init__.py  application.py  construct.py  debug_util.py  output.py  runtime.py  service_pb2_grpc.py  type_util.py
pkg/k2/language_host/python/klothosdk/src/klotho.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pkg/k2/language_host/python/klothosdk/src/klotho/aws/: __init__.py  api.py  bucket.py  container.py  dynamodb.py  fastapi.py  function.py  network.py  postgres.py  provider.py
pkg/k2/language_host/python/samples/: Pipfile  infra-api.py  infra-binding.py  infra.py
pkg/k2/language_host/python/samples/fastapi_postgres/: Dockerfile  Pipfile  infra.py
pkg/k2/language_host/python/samples/func/: handler.py  infra.py
pkg/k2/language_host/python/samples/func_dynamo/: Pipfile  handler.py  infra.py  response.json
pkg/k2/language_host/python/samples/starter/: Dockerfile  Pipfile  index.html  infra-api.py  infra-binding.py  infra-dynamodb.py  infra.py
pkg/k2/language_host/python/sdk/: klotho.py
(+2730 files in other folders)
