[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klotho"
version = "0.1.0"
description = "A Python SDK for Klotho2"
authors = [{ name = "Aaron Torres", email = "atorres@klo.dev" }]
readme = "klothosdk/README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse==1.4.0",
    "grpcio==1.64.0",
    "grpcio-tools==1.64.0",
    "protobuf==5.27.0",
    "pyyaml==6.0.1",
    "setuptools==70.0.0",
]

[project.optional-dependencies]
dev = ["debugpy==1.8.1"]

[tool.setuptools.packages.find]
where = ["klothosdk/src"]

[tool.setuptools]
package-dir = { "" = "klothosdk/src" }
include-package-data = true
