[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klotho"
version = "0.1.0"
description = "A Python SDK for Klotho2"
authors = [{ name = "Aaron Torres", email = "atorres@klo.dev" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "argparse >= 1.4.0",
    "grpcio >= 1.64.0",
    "grpcio-tools >= 1.64.0",
    "protobuf >= 5.27.0",
    "pyyaml >=6.0.0",
    "setuptools >=70",
]

[project.urls]
Homepage = "https://klo.dev"

[project.optional-dependencies]
dev = ["debugpy>=1.8.1, < 2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
